Quality: code cleaning (#2975)
Quality: code cleaning

Signed-off-by: Etienne LESOT <etienne.lesot@rte-france.com>